feat: recommend no sudo
Intruduces new result type: recommendation

A recommendation is neither a success nor failure, but a common practice
to avoid although there are some valid use cases. It should not result
in a failure in any execution contexts.

First recommendation is to avoid sudo/su and direct users to gosu if
neccessary to elevate privileges within the Dockerfile.

--- a/reporter/templates/html/index.tmpl
+++ b/reporter/templates/html/index.tmpl
@@ -24,9 +24,12 @@
 {{ range .Rows }}
 <div class="row">
 <div class="column left padded">
-    {{ $length := len .Errors }}{{ if gt $length 0 }}<ul class="results">
+    {{ if gt .MessagesCount 0 }}<ul class="results">
         {{ range .Errors }}
             <li>❌ {{ .Details }}</li>
+        {{ end }}
+        {{ range .Recommendations }}
+            <li>💡 {{ .Details }}</li>
         {{ end }}
     </ul>{{ end }}
 </div>
